--- a/Picture Saver/Picture Saver.csproj
+++ b/Picture Saver/Picture Saver.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{43BE8CD5-3EC4-43D5-97F7-AA1DF4F3E1BE}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Picture_Saver</RootNamespace>
-    <AssemblyName>Picture Saver</AssemblyName>
+    <RootNamespace>PictureSaver</RootNamespace>
+    <AssemblyName>PictureSaver</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Picture_Saver.Program</StartupObject>
+    <StartupObject>PictureSaver.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,8 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
