Working on making the CLI more usable.
Usage string now more robust.
Program prints some basics stats after running.
Program handles filenames without numbers now!

--- a/Picture Saver/Picture Saver.csproj
+++ b/Picture Saver/Picture Saver.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Command.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stats.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
